feat: undo functionality & significant internal reworking to support it
Also made chapter images into proper quest objects, like in 26.1